    o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.
    o #450346 by lefnire: Inherit Exposed Filters sometimes hides part of the parent exposed filters
    o #550560 by donquixote: Fix unterminated string in views.help.ini that breaks under php 5.3

  Other changes:
    o #580320 by chaps2: Allow "always use more link" setting.
    o #363516 by dagmar: Validate the uniqueness of exposed filter identifiers.
    o #584880 by drewish: Wrong base field declarations fixed.
    o #480162 by dereine: Count whitespace fields as empty for hiding labels.
    o #623580 by dagmar: Move can_expose() method to base handler to deal with validation change made in previous commit.
    
Views 2.7 (Nov 02, 2009)
  Bug fixes:
    o Table style when not overriding sorts put sorts in wrong order.
    o #488908 by sl27257: "Node: Has new content" only worked when exposed.
    o #451110 by wonder95: Fixed missing word in transform case help text.
    o #385904 by JirkaRybka: Prevent duplication of id edit-submit on views exposed form.
    o #489888 by TheRec: Remove erroneous "alt" attribute from <a> when using link rewriting.
    o #499078 by Darren Oh: Make sure theme is initialized for pre_render hook.
    o #490516 by v_20q: Some fields not properly being marked as translatable due to option unpacking bug.
    o #484222 by dereine: Attachment displays were ignoring access settings.
    o #503098 by Davide Goode: Feed displays should have link displays since they link to a page display.
    o #381346 by ayalon: Allow Taxonomy: Tid as a field, which is now needed for rewrites which may need tids.
    o #485296 by overall and deekayen: Remove unnecessary t() call.
    o #460838 by Darren Oh: Make DISTINCT more distinct.
    o #503774 by dereine: Cache time failed to return the proper cutoff time.
    o #506098: Table sorting with no default was overriding sorts even tho it was not supposed to.