@@ -6,6 +6,7 @@ Views 2.x-dev
     o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.
     o #450346 by lefnire: Inherit Exposed Filters sometimes hides part of the parent exposed filters
     o #550560 by donquixote: Fix unterminated string in views.help.ini that breaks under php 5.3
+    o #592476 by Garrett Albright: Remove redundant CSS from views-list.css
 
   Other changes:
     o #580320 by chaps2: Allow "always use more link" setting.
